feat: added filters, sort options and enriched client card

--- a/CRMTelmate.csproj
+++ b/CRMTelmate.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\Partials\ClientPartial.cs" />
     <Compile Include="Entities\Client.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -172,9 +173,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
     <Folder Include="Fonts\" />
-    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\logo.ico" />
@@ -186,7 +185,9 @@
     <Resource Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\searchicon.png" />
+    <Resource Include="Resources\searchicon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Entities\Model.Context.tt">
@@ -199,6 +200,9 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <EmbeddedResource Include="Resources\user.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Resource Include="Resources\picture.png" />
   </ItemGroup>
   <ItemGroup>
