--- a/CRMTelmate.csproj
+++ b/CRMTelmate.csproj
@@ -68,6 +68,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\Partials\ClientPartial.cs" />
+    <Compile Include="Classes\Partials\ServicePartial.cs" />
     <Compile Include="Entities\Client.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
