--- a/App.config
+++ b/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <connectionStrings>
+	    <add
+			name="TelmateEntities"
+			connectionString="metadata=res://*/Entities.Model.csdl|res://*/Entities.Model.ssdl|res://*/Entities.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CVL3JPH\DEV;initial catalog=Telmate;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+			providerName="System.Data.EntityClient"
+		/>
+    </connectionStrings>
 </configuration>
